started on chapter "Drawing a Triangle"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,15 @@ add_subdirectory(libs)
 
 find_package(Vulkan REQUIRED)
 
-add_executable(BasicProgram src/main.cpp)
-target_link_libraries(BasicProgram
+add_executable(HelloVKWindow "src/hello_vkwindow.cpp")
+target_link_libraries(HelloVKWindow
+	glfw
+	glm::glm
+	Vulkan::Vulkan
+)
+
+add_executable(Drawing-a-Triangle "src/drawing_a_triangle/main.cpp")
+target_link_libraries(Drawing-a-Triangle
 	glfw
 	glm::glm
 	Vulkan::Vulkan
